[gd_scene load_steps=25 format=3 uid="uid://bynfg43xmrc4b"]

[ext_resource type="Script" path="res://src/Scripts/Scenes/UI/SideBorderUI.gd" id="1_2mefq"]
[ext_resource type="StyleBox" uid="uid://cope74gtkx7e7" path="res://src/Assets/UI/Texture/BGShineTexture.tres" id="1_jgro3"]
[ext_resource type="LabelSettings" uid="uid://cmnh1qkt1nrwm" path="res://src/Assets/UI/Text/SelectionSceneBorderText.tres" id="2_43x30"]
[ext_resource type="Texture2D" uid="uid://dol0pnrd84jjj" path="res://src/Assets/UI/Texture/P1TextGradient.tres" id="3_mektc"]
[ext_resource type="Texture2D" uid="uid://blq5fskg0vctx" path="res://src/Assets/UI/Texture/BorderShineTexture.png" id="5_hs0dm"]

[sub_resource type="Gradient" id="Gradient_wimpg"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.121569, 0.317647, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_v8o8r"]
gradient = SubResource("Gradient_wimpg")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)
metadata/_snap_enabled = true

[sub_resource type="Curve" id="Curve_5bfwx"]
_data = [Vector2(0.497059, 0.984906), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_xubgy"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_205mn"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0.192157, 0.192157, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y3mgs"]
gradient = SubResource("Gradient_205mn")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)
metadata/_snap_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5hl4f"]
bg_color = Color(0.156863, 0.156863, 0.168627, 1)

[sub_resource type="Animation" id="Animation_nmj8f"]
resource_name = "IntroAnim"
length = 0.533337
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1.5, 1),
"update": 0,
"values": [Vector2(-85, 1280), Vector2(0, 1280)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:self_modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.133333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Partcles/LeftBorderParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Partcles/LeftBorderParticles:one_shot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_k8tv4"]
resource_name = "PlayerReadyState"
length = 0.233337
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_styles/panel:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.121569, 0.317647, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0.196078)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Texture/Container/Margin/Text/Gradient:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Partcles/LeftBorderParticles:one_shot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Partcles/LeftBorderParticles:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Partcles/LeftBorderParticles:explosiveness")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cbq4q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_styles/panel:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.156863, 0.156863, 0.168627, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Texture/Container/Margin/Text/Gradient:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Partcles/LeftBorderParticles:one_shot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Partcles/LeftBorderParticles:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Partcles/LeftBorderParticles:explosiveness")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.75]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-85, 1280)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vscd2"]
_data = {
"IntroAnim": SubResource("Animation_nmj8f"),
"PlayerReadyState": SubResource("Animation_k8tv4"),
"RESET": SubResource("Animation_cbq4q")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4gc5"]
bg_color = Color(0.156863, 0.156863, 0.168627, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t6jaq"]
texture = ExtResource("5_hs0dm")

[sub_resource type="Gradient" id="Gradient_vh3ev"]
colors = PackedColorArray(1, 0.192157, 0.192157, 1, 0.156863, 0.156863, 0.168627, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p6gyi"]
gradient = SubResource("Gradient_vh3ev")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)
metadata/_snap_enabled = true

[sub_resource type="Animation" id="Animation_onnjv"]
resource_name = "IntroAnim"
length = 0.533337
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1.5, 1),
"update": 0,
"values": [Vector2(805, 0), Vector2(720, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:self_modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.133333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Partcles/RightBorderParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Partcles/RightBorderParticles:one_shot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_x8rq4"]
resource_name = "PlayerReadyState"
length = 0.233337
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_styles/panel:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.192157, 0.192157, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0.196078)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Texture/Container/Margin/Text/Gradient:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Partcles/RightBorderParticles:one_shot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Partcles/RightBorderParticles:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Partcles/RightBorderParticles:explosiveness")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_2uitf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(805, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Partcles/RightBorderParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Partcles/RightBorderParticles:one_shot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:theme_override_styles/panel:bg_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.156863, 0.156863, 0.168627, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Texture/Container/Margin/Text/Gradient:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Partcles/RightBorderParticles:explosiveness")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.75]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ftiqk"]
_data = {
"IntroAnim": SubResource("Animation_onnjv"),
"PlayerReadyState": SubResource("Animation_x8rq4"),
"RESET": SubResource("Animation_2uitf")
}

[node name="SideBorderUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2mefq")

[node name="Partcles" type="Node2D" parent="."]

[node name="LeftBorderParticles" type="CPUParticles2D" parent="Partcles"]
position = Vector2(25, 640)
scale = Vector2(1, 640)
emitting = false
amount = 25
lifetime = 1.25
one_shot = true
speed_scale = 3.0
explosiveness = 0.75
texture = SubResource("GradientTexture2D_v8o8r")
emission_shape = 3
emission_rect_extents = Vector2(18, 1)
gravity = Vector2(250, 0)
angular_velocity_min = 50.0
angular_velocity_max = 50.0
scale_amount_curve = SubResource("Curve_5bfwx")
color_ramp = SubResource("Gradient_xubgy")

[node name="RightBorderParticles" type="CPUParticles2D" parent="Partcles"]
position = Vector2(695, 640)
scale = Vector2(1, 640)
emitting = false
amount = 25
lifetime = 1.25
one_shot = true
speed_scale = 3.0
explosiveness = 0.75
texture = SubResource("GradientTexture2D_y3mgs")
emission_shape = 3
emission_rect_extents = Vector2(18, 1)
gravity = Vector2(-250, 0)
angular_velocity_min = 50.0
angular_velocity_max = 50.0
scale_amount_curve = SubResource("Curve_5bfwx")
color_ramp = SubResource("Gradient_xubgy")

[node name="LeftBorderColor" type="PanelContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.118
anchor_bottom = 1.0
offset_left = -85.0
offset_top = 1280.0
offset_right = 1110.04
offset_bottom = 85.0
rotation = -1.5708
theme_override_styles/panel = SubResource("StyleBoxFlat_5hl4f")

[node name="Texture" type="PanelContainer" parent="LeftBorderColor"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("1_jgro3")

[node name="Container" type="HBoxContainer" parent="LeftBorderColor/Texture"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="LeftBorderColor/Texture/Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Text" type="Label" parent="LeftBorderColor/Texture/Container/Margin"]
clip_children = 2
layout_mode = 2
text = "PLACEHOLDER TEXT"
label_settings = ExtResource("2_43x30")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gradient" type="TextureRect" parent="LeftBorderColor/Texture/Container/Margin/Text"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mektc")

[node name="AnimPlayer" type="AnimationPlayer" parent="LeftBorderColor"]
libraries = {
"": SubResource("AnimationLibrary_vscd2")
}

[node name="RightBorderColor" type="PanelContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.882
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 169.96
offset_right = 1365.0
offset_bottom = -1195.0
rotation = 1.5708
theme_override_styles/panel = SubResource("StyleBoxFlat_y4gc5")

[node name="Texture" type="PanelContainer" parent="RightBorderColor"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_t6jaq")

[node name="Container" type="HBoxContainer" parent="RightBorderColor/Texture"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="RightBorderColor/Texture/Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Text" type="Label" parent="RightBorderColor/Texture/Container/Margin"]
clip_children = 2
layout_mode = 2
text = "PLACEHOLDER TEXT"
label_settings = ExtResource("2_43x30")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gradient" type="TextureRect" parent="RightBorderColor/Texture/Container/Margin/Text"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_p6gyi")

[node name="AnimPlayer" type="AnimationPlayer" parent="RightBorderColor"]
libraries = {
"": SubResource("AnimationLibrary_ftiqk")
}
